Avoid port conflict in integration tests (#13390)